--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "idi-manageorders-api"
+name = "idi-manageorders-sdk"
 version = "0.1.0"
 description = "ShopWorks ManageOrders API SDK"
 authors = [
@@ -28,8 +28,8 @@ docs = [
 tests = ["pytest>=8.2.2", "pytest-randomly>=3.15.0", "coverage>=7.6.1"]
 
 [project.urls]
-repository = "https://github.com/impressdesigns/manageorders-api/"
-documentation = "https://impressdesigns.dev/manageorders-api/"
+repository = "https://github.com/impressdesigns/manageorders-sdk/"
+documentation = "https://impressdesigns.dev/manageorders-sdk/"
 
 [build-system]
 requires = ["hatchling"]
