--- a/.github/workflows/python-publish-pypi.yaml
+++ b/.github/workflows/python-publish-pypi.yaml
@@ -35,7 +35,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/project/crazylibs/${{ github.ref_name }}
+      url: https://pypi.org/project/idi-manageorders-sdk/${{ github.ref_name }}
     permissions:
       id-token: write
 
