--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,11 @@ license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = ["httpx>=0.27.2", "pydantic>=2.9.2"]
 
-[project.optional-dependencies]
+[build-system]
+requires = ["uv_build"]
+build-backend = "uv_build"
+
+[dependency-groups]
 dev = [
     # DX
     "nox>=2024.4.15",
@@ -21,25 +25,25 @@ dev = [
 ]
 docs = [
     "sphinx>=7.4.4",
+    # Theme
     "furo>=2024.5.6",
+    # Extensions
     "sphinx-autoapi>=3.1.2",
     "releases>=2.1.1",
 ]
-tests = ["pytest>=8.2.2", "pytest-randomly>=3.15.0", "coverage>=7.6.1"]
+tests = [
+    "coverage>=7.6.1",
+    "pytest>=9.0.0",
+    # Extensions
+    "pytest-randomly>=3.15.0",
+]
 
 [project.urls]
 repository = "https://github.com/impressdesigns/manageorders-sdk/"
 documentation = "https://impressdesigns.dev/manageorders-sdk/"
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/manageorders_sdk"]
+[tool.uv.build-backend]
+module-name = "manageorders_sdk"
 
 [tool.ruff]
 target-version = "py312"
