--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -8,28 +8,29 @@ on:
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   lint-test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@5a7eac68fb9809dea845d802897dc5c723910fa3 # v7.1.3
+        with:
+          enable-cache: true
 
       - name: Setup Python
         uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
         with:
-          python-version: 3.12
-          allow-prereleases: true
-          cache: pip
-          cache-dependency-path: uv.lock
-
-      - name: Set up uv
-        run: curl -LsSf https://astral.sh/uv/install.sh | sh
+          python-version-file: "pyproject.toml"
 
       - name: Sync dependencies
-        run: uv sync --all-extras
+        run: uv sync --group dev --group tests
 
       - name: Run pre-commit
         run: uv run pre-commit run --all-files
@@ -41,23 +42,21 @@ jobs:
         run: uv run ruff check --output-format=github .
 
       - name: Run mypy
-        run: uv run mypy --strict src/
+        run: uv run mypy --strict src/ tests/
 
       - name: Run tests
-        run: uv run coverage run -m pytest -v
+        run: uv run python -m coverage run -m pytest -v --junitxml=junit.xml
 
       - name: Create coverage report
         run: uv run coverage xml
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@5a1091511ad55cbe89839c7260b706298ca349f7 # v5.5.1
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          use_oidc: true
 
-  docs:
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
-    uses: darbiadev/.github/.github/workflows/github-pages-python-sphinx.yaml@45471b560aceda922ebec22a20b72f0c29914cad # v15.1.0
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@47f89e9acb64b76debcd5ea40642d25a4adced9f # v1.1.1
+        with:
+          use_oidc: true
