--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,9 +22,9 @@ repos:
     hooks:
       - id: uv-lock
       - id: uv-export
-        args: ["--quiet", "--frozen", "--all-groups", "--output-file=requirements.txt"]
+        args: ["--quiet", "--all-groups", "--output-file=requirements.txt"]
       - id: uv-export
-        args: ["--quiet", "--frozen", "--all-groups", "--format=pylock.toml", "--output-file=pylock.toml"]
+        args: ["--quiet", "--all-groups", "--format=pylock.toml", "--output-file=pylock.toml"]
 
   - repo: https://github.com/woodruffw/zizmor-pre-commit
     rev: 86ee5ea442ee969842e00913c6b76c060a7aa8ef  # frozen: v1.16.3
